# Operating-Systems-IU-3-Semester

./: .gitignore  CMakeLists.txt  README.md  e  temp.txt  test
week01/: ex1.sh  ex1.txt  ex2.txt  ex3.sh  ex4  ex4.sh  main.c  readme.md
week01/home/: home.txt
week01/root/: root.txt
week02/: ex1.c  ex2  ex2.c  ex3.c  ex4.c  ex5.c
week03/: ex1.c  ex2  ex2.c  ex3.c  ex4.c  ex6.c
week04/: ex1  ex1.c  ex2  ex2.c  ex3  ex3.c  ex3.sh  ex3.txt  ex4  ex4.c  temp.txt
week05/: channel.c  ex1.sh  ex1.txt  ex2  ex2.c  ex2.sh  ex3  ex3.c  ex3.sh  ex3_exp.txt  ex3_res.txt  ex4.c  ex4.sh  ex4_exp.txt  ex4_res.txt  pub  publisher.c  sub  subscriber.c
week06/: agent.c  controller.c  data.txt  ex1.sh  ex2.sh  ex2.txt  ex3.sh  ex3.txt  ex4.sh  ex4.txt  scheduler.c  scheduler_rr.c  scheduler_sjf.c  text.txt  worker.c
week07/: allocator.c  ex1.txt  ex2.c  queries.txt
week08/: ex1.c  ex1_hack.sh  ex2.sh  ex3.c  ex3.txt  mmu.c  pager.c
week09/: ex1.sh  ex1.txt  ex2.sh  ex2.txt  mmu.c  pager.c
week10/: ex1.c  ex1.sh  ex1.txt  ex21.sh  ex22.sh  ex23.sh  ex24.sh  ex25.sh  gen.sh  monitor.c
week11/: ex1.c  ex1.sh  ex1.txt  ex2.c  ex2.sh
week12/: ex1.c
week13/: ex1.c  ex2.c
